--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,15 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
+        android:state_pressed="true"
+        android:state_enabled="true"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home"/>
+        android:title="Home"
+        />
     <item
         android:id="@+id/saved_homes"
+        android:state_pressed="true"
+        android:state_enabled="true"
         android:icon="@drawable/baseline_saved_search_24"
-        android:title="saved" />
+        android:title="saved"
+        />
 
     <item
         android:id="@+id/settings"
+        android:state_enabled="true"
         android:icon="@drawable/baseline_settings_24"
-        android:title="settings"/>
+        android:title="settings"
+       />
 </menu>
