--- a/app/src/main/res/layout/activity_house_detail.xml
+++ b/app/src/main/res/layout/activity_house_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HouseDetailsFragment">
+    tools:context=".HouseDetailsActivity">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -158,6 +158,13 @@
                 </HorizontalScrollView>
             </LinearLayout>
 
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_alignParentBottom="true"
+                tools:context=".MapsActivity" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
