--- a/app/src/main/res/layout/fragment_saved_houses.xml
+++ b/app/src/main/res/layout/fragment_saved_houses.xml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".SavedHousesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
+
 
 </FrameLayout>
