--- a/app/src/main/res/layout/activity_house_detail.xml
+++ b/app/src/main/res/layout/activity_house_detail.xml
@@ -54,6 +54,7 @@
                 android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8px"
                 android:gravity="center"
                 android:text="Location"
                 android:textSize="16sp" />
@@ -106,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif"
-                android:gravity="center_horizontal"
+                android:gravity="center_vertical"
                 android:paddingTop="16dp"
                 android:paddingBottom="32dp"
                 android:text="Detailed description here."
