--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="api_key_zillow">Zillow Key</string>
+    <string name="api_key_zillow">c479ed0734msh82867c6952a6fd3p12ae2djsnd9b3b67ba881</string>
     <string name="google_maps_api_key">Google Maps key</string>
 </resources>
